# calculator

./: CMakeLists.txt  README.md  make_calc.sh
src/: CMakeLists.txt  calc.cpp
src/calc/: CMakeLists.txt  calc.cpp  calc.h
src/date_strucrs/: date_structs.h
src/date_structs/: CMakeLists.txt  date_structs.h
src/main/: main.cpp
src/parse/: CMakeLists.txt  parse.cpp  parse.h
src/print/: CMakeLists.txt  print.h
src/runer/: CMakeLists.txt  runer.cpp  runer.h
